# vesl-wallet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
crates/vesl-signing/: Cargo.toml
crates/vesl-signing/examples/: mock_trust_anchor.rs
crates/vesl-signing/src/: caip122.rs  domain.rs  lib.rs  prelude.rs  replay_cache.rs  schnorr.rs
crates/vesl-signing/src/math/: belt.rs  bpoly.rs  cheetah.rs  mod.rs  tip5.rs
crates/vesl-signing/tests/: api_smoke.rs  parity_with_nockchain_math.rs
crates/vesl-wallet/: Cargo.toml
crates/vesl-wallet-spec/: Cargo.toml  SPEC.md
crates/vesl-wallet-spec/src/: lib.rs
crates/vesl-wallet/src/: error.rs  hd.rs  lib.rs  wallet.rs
crates/vesl-wallet/tests/: round_trip.rs
scripts/: check-pins.sh  preflight.sh  release-notes.template.md  release.sh
scripts/hooks/: pre-push
