[workspace]
resolver = "2"
members = [
    "crates/vesl-signing",
    "crates/vesl-wallet-spec",
    "crates/vesl-wallet",
]

[workspace.package]
# Pre-0.1.0 scaffolding. First crate to ship is vesl-signing v0.1.0; at that
# point the bundle tag bumps to v0.1.0. Until then we sit at v0.0.0
# (scaffold marker).
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkvesl/vesl-identity"
publish = false

[workspace.dependencies]
# Pins matched to x402-nockchain's workspace deps to avoid version churn.
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
ibig = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
