[package]
name = "vesl-signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Schnorr-over-Cheetah signing, Tip5 domain separators, SIWN (CAIP-122). Foundation primitive for the Vesl/Nockchain wallet workspace; independently consumable by hardware-wallet vendors, light-clients, oracle services, and any other non-wallet consumer that needs Schnorr-over-Cheetah signing. Self-contained: vendors the Goldilocks/Cheetah/Tip5 math substrate."
readme = "../../README.md"
keywords = ["nockchain", "vesl", "schnorr", "cheetah", "tip5"]
categories = ["cryptography"]

[dependencies]
# Always-on: core signing primitives + math substrate
bs58 = { workspace = true }
ibig = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

# Feature-gated: JSON wire types (SchnorrSignatureJson, SchnorrPair)
# Hardware-wallet vendors who don't speak JSON can drop this and get a
# leaner crate. `domain::hash_canonical` and schnorr's `decode_signature`/
# `encode_signature` require this feature.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Feature-gated: SIWN (CAIP-122) module. Pulls chrono + base64 + anyhow.
chrono = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = ["json", "siwn"]
json = ["dep:serde", "dep:serde_json"]
siwn = ["json", "dep:chrono", "dep:base64", "dep:anyhow"]

# Integration tests and examples that depend on the feature-gated surface
# declare their requirements here so `cargo test --no-default-features`
# silently skips them rather than failing to compile.

[[test]]
name = "api_smoke"
required-features = ["json"]

[[test]]
name = "parity_with_nockchain_math"
required-features = []

[[example]]
name = "mock_trust_anchor"
required-features = ["siwn"]
