[package]
name = "vesl-wallet-spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vesl wallet derivation spec — BIP44 5-level layout, role assignments, doc-only canonical reference."
readme = "../../README.md"
keywords = ["nockchain", "vesl", "bip44", "wallet", "hd"]
categories = ["cryptography"]

[dependencies]
# Doc-only crate by design. Role constants + DerivationPath ship in lib.rs;
# the normative spec is SPEC.md at the crate root.

