[package]
name = "vesl-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ergonomic Hull-author wallet API bundling vesl-wallet-spec + vesl-signing + pure-Rust HD derivation over Cheetah."
readme = "README.md"
keywords = ["nockchain", "vesl", "wallet", "schnorr", "bip44"]
categories = ["cryptography"]

[dependencies]
# Bundle entry point. Will depend on:
# - vesl-signing (path = "../vesl-signing")          — canonical signing
# - vesl-wallet-spec (path = "../vesl-wallet-spec")  — derivation-path constants
# - bip39 + custom Cheetah-BIP32 layer               — pure-Rust HD
# Per architectural decision 2026-04-29: NO `nockchain-wallet` dep.
